// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteTableEntry should render delete parameter 1`] = `
<span>
  <MessageDialog
    accessibleDescription=""
    accessibleName=""
    className=""
    enforceFocus={true}
    footer={null}
    icon={null}
    onHide={[Function]}
    primaryAction={[Function]}
    primaryActionButtonBsStyle="primary"
    primaryActionButtonContent="Confirm"
    primaryContent="Are you sure you wish to delete this item?"
    secondaryAction={[Function]}
    secondaryActionButtonBsStyle="default"
    secondaryActionButtonContent="Cancel"
    secondaryContent={null}
    show={false}
    title="Confirm action"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      name="delete"
      title="Delete entry"
      type="pf"
    />
  </Button>
</span>
`;

exports[`DeleteTableEntry should render disabled button 1`] = `
<span>
  <MessageDialog
    accessibleDescription=""
    accessibleName=""
    className=""
    enforceFocus={true}
    footer={null}
    icon={null}
    onHide={[Function]}
    primaryAction={[Function]}
    primaryActionButtonBsStyle="primary"
    primaryActionButtonContent="Confirm"
    primaryContent="Are you sure you wish to delete this item?"
    secondaryAction={[Function]}
    secondaryActionButtonBsStyle="default"
    secondaryActionButtonContent="Cancel"
    secondaryContent={null}
    show={false}
    title="Confirm action"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    disabled={true}
    onClick={[Function]}
  >
    <Icon
      name="delete"
      title="Delete entry"
      type="pf"
    />
  </Button>
</span>
`;

exports[`DeleteTableEntry should render hidden button 1`] = `""`;
